fix layout bugs (#97)

--- a/services/frontend/src/components/Buttons/Button/Button.module.scss
+++ b/services/frontend/src/components/Buttons/Button/Button.module.scss
@@ -245,6 +245,12 @@
       &:hover,
       &:focus-visible {
         border-color: $text5;
+        color: $text5;
+        svg {
+          path {
+            stroke: $text5;
+          }
+        }
       }
     }
 
